riemann container scales & hostname is used as a routing key

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: "2"
+version: "2.2"
 services:
     riemann:
         image: riemann:test
         volumes:
-            - ./riemann.config:/etc/riemann.config
+            - ./riemann.config:/etc/riemann.config:ro
         depends_on:
             - rabbitmq
+        scale: 2
 
     rabbitmq:
         image: rabbitmq:management
