--- a/riemann.config
+++ b/riemann.config
@@ -3,18 +3,24 @@
 
 (logging/init {:file "riemann.log"})
 
-(instrumentation {:interval 1})
+(def opts
+  (let [opts {:host "rabbitmq"}]
+    (if-let [routing-key (System/getenv "HOSTNAME")]
+      (assoc opts :routing-key routing-key)
+      opts)))
 
-(rabbitmq-client {:host "rabbitmq"})
+(rabbitmq-transport opts)
+
+(info "started with" opts)
 
 (periodically-expire 1 {:keep-keys [:host :service :tags :time :ttl]})
 
 (let [index (index)]
   (streams
-    (default :ttl 3
-      ; (where (not (service #"^riemann "))
-      ;   prn)
-      (expired #(prn "Expired" %))
-      (where (not (service #"^riemann "))
-             index))))
+    (not-expired
+      (where (not (service #"^riemann.+$"))
+        index
+        #(info %)))
+    (expired
+      #(info "EXPIRED:" %))))
 
